# SFF

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL_DEPENDENCIES.md  LICENSE  Main.py  Main_gui.py  README.md  build_sff.spec  build_sff_gui.spec  build_simple.bat  build_simple_gui.bat  credentials.json.example  install_online_fix_requirements.bat  pyproject.toml  requirements-consumer.txt  requirements.txt
c/: Extended_Super_Mario_64_Soundfont.sf2  midi_player_lib.c  th105_broken_moon_redpaper_.mid
docs/: FEATURE_USAGE_GUIDE.md  MULTIPLAYER_FIX.md  QUICK_REFERENCE.md  README.md  RYUU_FIX.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/dlc_unlockers/: README.md
hooks/: hook-win10toast.py
manifests/: 111_222.manifest
sff/: __init__.py  analytics.py  backup.py  cache.py  cloud_saves.py  fun.py  fzf.py  game_specific.py  http_utils.py  i18n.py  integrity.py  keyboard_shortcuts.py  library_scanner.py  midi.py  notifications.py  online_fix.py  processes.py  progress.py  prompts.py  recent_files.py  registry_access.py  ryuu_fix.py  secret_store.py  steam_client.py  steam_path.py  steam_store.py  steam_tools_compat.py  steamauto.py  store_browser.py  strings.py  structs.py  ui.py  updater.py  utils.py  zip.py
sff/app_injector/: applist.py  applist_profiles.py  base.py  sls.py
sff/dlc_unlockers/: __init__.py  base.py  creamapi.py  downloader.py  koaloader.py  manager.py  smokeapi.py  steam_dll_utils.py  uplay_r1.py  uplay_r2.py  validation.py
sff/fix_game/: cache.py  config_generator.py  goldberg_applier.py  goldberg_updater.py  service.py
sff/gui/: __init__.py  cloud_saves_tab.py  fix_game_tab.py  gui_prompts.py  main_window.py  resources.qrc  (+4 more)
third_party_licenses/: fzf.LICENSE
(+26 files in other folders)
