[project]
name = "steam-manifest-decrypt"
version = "4.6.4"
description = "Decrypt steam manifest files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.9.0",
    "colorama>=0.4.6",
    "configupdater>=3.2",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "isort>=6.1.0",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "msgpack>=1.1.2",
    "pathvalidate>=3.3.1",
    "protobuf>=3.20.3",
    "psutil>=7.1.3",
    "pycryptodome>=3.23.0",
    "pyinstaller>=6.16.0",
    "pynacl>=1.6.0",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "selenium>=4.15.0",
    "rich>=14.2.0",
    "steam[client]>=1.4.4",
    "gevent-eventemitter>=2.1",  # required by steam; do NOT install the "eventemitter" package (name collision)
    "tqdm>=4.67.1",
    "PyQt6>=6.4.0",
    "PyQt6-WebEngine>=6.4.0",
    "vdf>=3.4",
    "torpy>=1.1.6",
    "Pillow>=11.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "win10toast>=0.9",
]

[tool.isort]
profile = "black"

[tool.uv.sources]
inquirerpy = { git = "https://github.com/kazhala/InquirerPy" }


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
changelog_incremental = true
gpg_sign = true
changelog_start_rev = "4.2.0"
version_files = [
    "sff/strings.py:VERSION"
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "grpcio-tools>=1.48.2",
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "pytest-mock>=3.12.0",
]
